--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,5 +1,16 @@
 FROM python:3.9
-WORKDIR /usr/src/app
+
+# Set environment variables
+ENV PYTHONUNBUFFERED=1
+
+# Create a working directory for the django project
+WORKDIR /web
+
+# Copy code
 COPY . .
+
+# Install the requirements to the container
 RUN pip install --no-cache-dir -r requirements.txt
-RUN mkdir -p db
+
+# Open a port on the container
+EXPOSE 8000
